# muOS-MinUIfied-Theme-Generator

./: .gitattributes  .gitignore  ConsoleAssociations.txt  Custom MinUI Theme Generator for muOS.py  Dummy Folder Maker.py  LICENSE  PremadeThemes.json  PreviousDirectories.txt  README.md  Windows Build Settings.spec  _ConsoleAssociations.json  macOS Build Settings.spec  main.py  premade-themes.md  pyproject.toml  requirements.txt  test.py
.github/: FUNDING.yml
.github/workflows/: build-windows.yml  update-premade-grid-themes.yml  update-premade-themes.yml
Assets/: base_settings.json  menu_definitions.json
Assets/System Logos/: Custom Logos.afphoto
Assets/Thumbnails/: All Theme Thumbnails.afphoto
Assets/glyphs/: battery.afphoto  (+1 more)
Generate Scheme File From Source/: Default Scheme File Generator.py
Grid-Theme-Gallery/: index.md
Helper Scripts/: Find Unique Curly Brackets in Scheme.py  Processing muOS languages template.py
Icons/: macos.icns
Language-Text-Replacement-Files/: muOS 2410.1 Banana.json
Pre-made Themes/: index.md
Template Scheme/: ._default.txt  Legacy - default.txt  Legacy - muxlaunch.txt  default.txt  mux.txt  muxthemed.txt  new complete theme.txt  template.ini  template.txt
Theme-Gallery/: index.md
Themes-Gallery/: index.md
Translation Files/: AlternateMenuNames.French.json  AlternateMenuNames.Hebrew.json  AlternateMenuNames.Portuguese.json  AlternateMenuNames.Spanish.json  AlternateMenuNames.Valencian.json  Hebrew.json
generator/: app.py  color_utils.py  config.py  constants.py  defaults.py  font.py  settings.py  theme.py  utils.py
(+51 files in other folders)
